horizontal scrolling bug fix

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 
     color: rgb(255, 255, 255);
 }
+html{
+  overflow-x: hidden;
+  width: 100%;
+}
 body {
     overflow-x: hidden;
     overflow-y: auto;
